--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+.fondo-principal {
+    background-image: url("Imágenes/imagenbanderas.webp");
+}
+
 body{
     color: rgb(31, 31, 109);
-    background-image: url("Imágenes/imagenbanderas.webp");
     margin:0;
     background-size:cover;
     display: flex; /*por defecto pone las cosas una al lado de la otra*/
@@ -29,7 +32,8 @@ header{
     }
     select{
         width:15px;
-        border:1px white solid
+        border:1px white solid;
+        cursor: pointer;
         }
 
     nav{
@@ -50,9 +54,9 @@ header{
 }
 
 main{
-    display: flex;
-    flex-direction:column;
-    text-align: center;
+    display:flex;
+    flex-direction: column;
+    align-items:center;
     height: 200px;
     margin: 0px 60px;
     width: 400px;
@@ -91,7 +95,52 @@ main{
         padding:0px;
     }
     }
+    
 }
+
+.contenido{
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    margin:0;
+    height: 400px;
+    width: 800px;
+
+}
+    h2{
+        font-size: xx-large;
+        font-weight: bolder;
+        width: 700px;
+
+    }
+    .partes{
+        display:flex;
+        flex-direction:row;
+        justify-content: space-between;
+        gap:30px;
+        padding-left:850px;
+        padding-bottom: 30px;
+    }
+    
+    .idiomas{
+        display:flex;
+        flex-direction: row;
+        width: 400px;
+        height: 70px;
+        box-shadow: 0px 0px 1px 1px rgb(165, 154, 154);
+        img{
+            padding-left: 20px;
+            padding-top: 15px;
+        }
+        p{
+            font-size: x-large;
+            font-weight:bolder;
+            padding-left:10px;
+            color: rgb(31, 31, 109);    
+        } 
+    }
+
+
 
 
 footer{
