--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body{
     margin:0;
     background-size:cover;
     display: flex; /*por defecto pone las cosas una al lado de la otra*/
-    flex-direction: column; /* pone los elementos uno debajo de otro*/
-    justify-content: space-between; /*para establecer la separación entre main y header verticalmente*/
+    flex-direction: column; /* pone los elementos uno debajo de otro*/; 
+    justify-content: space-between;
     height:100vh; /*altura del body, sería la altura de la pantalla. No suele hacer falta ponerle altura*/
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
@@ -98,11 +98,10 @@ main{
     
 }
 
-.contenido{
+#contenido{
     display:flex;
     flex-direction: column;
     align-items:center;
-    margin:0;
     height: 400px;
     width: 800px;
 
@@ -111,6 +110,7 @@ main{
         font-size: xx-large;
         font-weight: bolder;
         width: 700px;
+        padding-left: 1100px;
 
     }
     .partes{
