--- a/style.css
+++ b/style.css
@@ -60,9 +60,14 @@ main{
     height: 200px;
     margin: 0px 60px;
     width: 400px;
+    padding-left:200px;
     article{
         background-color: white;
         box-shadow: 0px 0px 3px 3px red;
+        display:flex;
+        flex-direction: column;
+        align-items:center;
+        gap: 1px;
         width: 700px;
         height: 500px;
         padding-bottom: 30px;
@@ -71,15 +76,15 @@ main{
     p{
         color:rgb(36, 35, 35);
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        padding-bottom: 10px;
+        text-align:center;
     }
     a{
         background-color:rgb(31, 31, 109);
         text-align: center;
-        width: 300px;
+        width: 100px;
         color: white;
         text-decoration: none;
-        padding: 10px;
+        padding:10px;
         border-radius: 4px;
         font-size: medium;
     }
@@ -92,7 +97,6 @@ main{
     h1{
         text-align: center;
         font-size:xx-large;
-        padding:0px;
     }
     }
     
@@ -104,13 +108,14 @@ main{
     align-items:center;
     height: 400px;
     width: 800px;
+    padding-left: 25px;
 
 }
     h2{
         font-size: xx-large;
         font-weight: bolder;
         width: 700px;
-        padding-left: 1100px;
+        padding-left: 600px;
 
     }
     .partes{
@@ -118,7 +123,7 @@ main{
         flex-direction:row;
         justify-content: space-between;
         gap:30px;
-        padding-left:850px;
+        padding-left:400px;
         padding-bottom: 30px;
     }
     
