--- a/style.css
+++ b/style.css
@@ -3,23 +3,24 @@
 }
 
 body{
-    color: rgb(31, 31, 109);
+    color:rgb(2, 2, 48);
     margin:0;
     background-size:cover;
     display: flex; /*por defecto pone las cosas una al lado de la otra*/
     flex-direction: column; /* pone los elementos uno debajo de otro*/; 
     justify-content: space-between;
     height:100vh; /*altura del body, sería la altura de la pantalla. No suele hacer falta ponerle altura*/
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-decoration: none;
     height:100vh;
-
+    background-color:rgb(36, 35, 35, 0.7)
 }
 
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
     margin:0;
     border: 3px rgb(31, 31, 109) solid;
     border-radius: 10px;
@@ -31,25 +32,24 @@ header{
         padding: 0px;
     }
     select{
-        width:15px;
+        width:100px;
         border:1px white solid;
         cursor: pointer;
+        background-color:white;
+        color:rgb(31, 31, 109);
+        font-size: medium;
+        font-weight: bolder;
         }
 
     nav{
         padding-right: 65px;
-        label{
-            font-size: x-large;
-        }
     }
     div{
-        padding-left:550px;
+        padding-left:800px;
+        position: absolute;
         img{ 
             width: 45px;
         }
-    }
-    #logo:hover{
-        width: 320px;
     }
 }
 
@@ -59,34 +59,38 @@ main{
     align-items:center;
     height: 200px;
     margin: 0px 60px;
-    width: 400px;
-    padding-left:200px;
+    width: 1000px;
+    padding-left: 0px;
     article{
         background-color: white;
-        box-shadow: 0px 0px 3px 3px red;
         display:flex;
         flex-direction: column;
         align-items:center;
+        position: relative;
         gap: 1px;
         width: 700px;
-        height: 500px;
+        height: 600px;
         padding-bottom: 30px;
-        border-radius: 4px;
+        border-radius: 10px;
 
     p{
-        color:rgb(36, 35, 35);
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         text-align:center;
+        margin-bottom: 5px;
+        margin-top: 5px;
     }
     a{
         background-color:rgb(31, 31, 109);
         text-align: center;
+        position: absolute;
         width: 100px;
+        height: 20px;
         color: white;
         text-decoration: none;
         padding:10px;
         border-radius: 4px;
         font-size: medium;
+        margin-top: 150px;
     }
     #ver-idiomas:hover{
         background-color: white;
@@ -97,6 +101,7 @@ main{
     h1{
         text-align: center;
         font-size:xx-large;
+        color:rgb(31, 31, 109);
     }
     }
     
@@ -105,48 +110,59 @@ main{
 #contenido{
     display:flex;
     flex-direction: column;
-    align-items:center;
+    gap:20px;
     height: 400px;
     width: 800px;
-    padding-left: 25px;
+    margin-left: 75px;
 
 }
     h2{
         font-size: xx-large;
         font-weight: bolder;
         width: 700px;
-        padding-left: 600px;
+        margin-left: 600px;
+        margin-bottom: 10px;
 
     }
     .partes{
         display:flex;
         flex-direction:row;
         justify-content: space-between;
-        gap:30px;
+        gap:50px;
         padding-left:400px;
-        padding-bottom: 30px;
     }
-    
+
+    .tarjeta{
+        display: flex;
+        flex-direction:column ;  
+        overflow: hidden;
+        width: 400px;
+        height: 70px;       
+        box-shadow: 0px 0px 1px 1px rgb(165, 154, 154);        
+        cursor:pointer;
+    }
     .idiomas{
         display:flex;
         flex-direction: row;
-        width: 400px;
-        height: 70px;
-        box-shadow: 0px 0px 1px 1px rgb(165, 154, 154);
         img{
-            padding-left: 20px;
-            padding-top: 15px;
+            padding-right: 0px;
+            padding-top: 8px;
         }
         p{
             font-size: x-large;
             font-weight:bolder;
-            padding-left:10px;
-            color: rgb(31, 31, 109);    
+            margin-top: 50px;
+            margin-right: 10px;
+            color: rgb(31, 31, 109); 
+            width: 300px;   
         } 
     }
-
-
-
+.tarjeta:hover{
+    box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+    transform: translateY(-3%);
+    height: 120px;
+    transition: 0.3s;
+}
 
 footer{
     display: flex;
@@ -181,3 +197,6 @@ footer{
     }
     }
 
+    #ver-mas{
+        background-color: white;
+    }
