--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .fondo-principal {
     background-image: url("Imágenes/imagenbanderas.webp");
 }
+#ver-mas{
+        background-color: white;
+    }
 
 body{
     color:rgb(2, 2, 48);
@@ -10,9 +13,9 @@ body{
     flex-direction: column; /* pone los elementos uno debajo de otro*/; 
     justify-content: space-between;
     height:100vh; /*altura del body, sería la altura de la pantalla. No suele hacer falta ponerle altura*/
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     text-decoration: none;
-    height:100vh;
+    height:130vh;
     background-color:rgb(36, 35, 35, 0.7)
 }
 
@@ -74,7 +77,6 @@ main{
         border-radius: 10px;
 
     p{
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         text-align:center;
         margin-bottom: 5px;
         margin-top: 5px;
@@ -118,7 +120,7 @@ main{
 }
     h2{
         font-size: xx-large;
-        font-weight: bolder;
+        font-weight: bold;
         width: 700px;
         margin-left: 600px;
         margin-bottom: 10px;
@@ -169,34 +171,42 @@ footer{
     flex-direction:row;
     justify-content: space-between;
     background-color: rgb(31, 31, 109);
-    height: 100px;
+    height: 300px;
     margin-bottom: 0;
     color: rgb(180, 173, 173);
     div{
-        padding-top: 5px;;
-        padding-left: 250px;
-        font-weight: bold;
-        font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        p{
-            margin: 4px;
+        padding-top: 100px;
+        padding-left: 400px;
+        margin-bottom: 5px;
+        font-weight: light;
+        margin: 4px;
+        width: 200px;
+        text-align: center;
         }
-    }
-    #redes-sociales{
-        padding-top: 45px;
-        padding-right: 50px;
+    #logo-footer{
+        width:200px;
+        height: 200px;
+        padding-right: 450px;
+        padding-top: 60px;
     }
     .red{
-        width:40px;
+        width:35px;
         padding-right:10px;
-    }
-    p:hover{
-        text-decoration: underline;
     }
     img:hover{
         width: 45px;
+        transition: 0.3s;
+    }
+    #contactos{
+        display: flex;
+        flex-direction: column;
+        padding-left: 80px;
+        padding-top: 0px;
+        padding-bottom: 100px;
+        margin:0px;
+    }
+    #redes-sociales{
+        padding-top:5px;
     }
     }
-
-    #ver-mas{
-        background-color: white;
-    }
+    
