--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ main{
     display:flex;
     flex-direction: column;
     align-items:center;
-    height: 200px;
+    height: 250px;
     margin: 0px 60px;
     width: 1000px;
     padding-left: 0px;
@@ -72,7 +72,7 @@ main{
         position: relative;
         gap: 1px;
         width: 700px;
-        height: 600px;
+        height: 700px;
         padding-bottom: 30px;
         border-radius: 10px;
 
@@ -85,14 +85,14 @@ main{
         background-color:rgb(31, 31, 109);
         text-align: center;
         position: absolute;
-        width: 100px;
+        width: 150px;
         height: 20px;
         color: white;
         text-decoration: none;
         padding:10px;
         border-radius: 4px;
         font-size: medium;
-        margin-top: 150px;
+        margin-top: 200px;
     }
     #ver-idiomas:hover{
         background-color: white;
@@ -116,12 +116,10 @@ main{
     height: 400px;
     width: 800px;
     margin-left: 75px;
-
-}
     h2{
         font-size: xx-large;
-        font-weight: bold;
-        width: 700px;
+        font-weight: light;
+        width: 800px;
         margin-left: 600px;
         margin-bottom: 10px;
 
@@ -143,28 +141,29 @@ main{
         box-shadow: 0px 0px 1px 1px rgb(165, 154, 154);        
         cursor:pointer;
     }
-    .idiomas{
-        display:flex;
-        flex-direction: row;
-        img{
-            padding-right: 0px;
-            padding-top: 8px;
-        }
-        p{
-            font-size: x-large;
-            font-weight:bolder;
-            margin-top: 50px;
-            margin-right: 10px;
-            color: rgb(31, 31, 109); 
-            width: 300px;   
-        } 
-    }
-.tarjeta:hover{
+    .tarjeta:hover{
     box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
     transform: translateY(-3%);
     height: 120px;
     transition: 0.3s;
-}
+    }
+    .idiomas{
+        display:flex;
+        flex-direction: row;
+        img{
+            padding-left: 40px;
+            padding-top: 8px;
+        }
+        p{
+            font-size: x-large;
+            font-weight:light;
+            margin-top: 50px;
+            margin-right: 60px;
+            color: rgb(31, 31, 109); 
+            width: 300px;   
+        } 
+    }
+    }
 
 footer{
     display: flex;
